--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:./npmpublic/css/style.css"
+    "sass": "sass --watch ./sass/main.scss:./npmpublic/css/style.css",
+    "prefix":"postcss ./public/css/style.css --use autoprefixer -d ./public/css/prefixed/"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "browserlist":"last 4 versions"
 }
